--- a/style.css
+++ b/style.css
@@ -1,14 +1,243 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Mono&subset=cyrillic");
 
-/*---Media Queries --*/
-@media (max-width: 992px) {
+html, body{
+  height: 100%;
+  width: 100%;
+  font-family: roboto;
+  color: #222;
+}
 
+.navbar{
+  padding: .8rem;
+}
+
+.navbar-nav li{
+  padding-right: 20px;
+}
+
+.nav-link{
+  font-size: 1.1em !important;
+}
+
+.carousel-inner img{
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-caption {
+  position: absolute;
+  top: 60%;
+  transform: translateY(-50%);
+}
+.carousel-caption h1{
+  font-size: 500%;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 15px #000;
+}
+
+.carousel-caption h2{
+  font-size: 200%;
+  color: #005266;
+  font-weight: 500;
+  text-shadow: 1px 1px 10px #000;
+  padding: 1rem;
+}
+
+.jumbotron{
+  padding: 1rem;
+  border-radius: 0;
+}
+.padding{
+  padding-bottom: 3rem;
+}
+.welcome{
+  width: 75%;
+  margin: 0 auto;
+  padding-top: 2rem;
+}
+
+.welcome hr{
+  border-top: 2px solid #b4b4b4;
+  width: 90%;
+  margin-top: .3rem;
+  margin-bottom: 1rem;
+}
+
+.fa-search{
+  color: #3333ff;
+}
+
+.fa-desktop{
+  color: #3973ac;
+}
+
+.fa-edit{
+ color: #808000;
+}
+.fa-search, .fa-desktop, .fa-edit{
+  font-size: 4rem;
+  margin: 1rem;
+}
+
+.fixed-wrap{
+  background-color: #80b3ff;
+}
+
+.fun{
+  width: 100%;
+  margin-bottom: 2rem;
+  text-transform: uppercase;
+}
+
+
+.gif{
+  max-width: 100%;
+}
+
+.social a {
+  font-size: 4.5rem;
+  padding: 3rem;
+}
+
+.fa-facebook{
+  color: #3b5998;
+}
+
+.fa-twitter{
+  color: #00aced;
+}
+
+.fa-youtube{
+  color: #bb0000;
+}
+
+.fa-google-plus-g{
+  color: #dd4b39;
+}
+
+.fa-facebook:hover,
+.fa-twitter:hover,
+.fa-youtube:hover,
+.fa-google-plus-g:hover {
+  color: #ccc;
+}
+
+footer{
+  background-color: #3f3f3f;
+  color: #d5d5d5;
+  padding-top: 2rem;
+}
+
+hr.light{
+  border-top: 1px solid #d5d5d5;
+  width: 75%;
+  margin-top: .8rem;
+  margin-bottom: 1rem;
+}
+
+footer a {
+  color: #d5d5d5;
+}
+
+hr.light-long{
+  border-top: 1px solid #fff;
+  width: 100%;
+  margin-top: .8rem;
+  margin-bottom: 1rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*---Media Queries --*/
+
+/*desktop version */
+
+@media (max-width: 992px) {
+  .social a {
+    font-size: 4em;
+    padding: 2em;
   }
+  }
+
+  /*tablet version */
+
 @media (max-width: 768px) {
 
-}
-@media (max-width: 576px) {
+.carousel-caption {
+  position: absolute;
+  top: 50%;
 
+}
+.carousel-caption h1{
+  font-size: 500%;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 15px #000;
+}
+
+.carousel-caption h2{
+  font-size: 200%;
+  color: #005266;
+  font-weight: 500;
+  text-shadow: 1px 1px 10px #000;
+  padding: 1rem;
+}
+  .carousel-caption .btn{
+    font-size: 95%;
+    padding: 8px 14px;
+  }
+
+  .display-3{
+    font-size: 200%;
+  }
+
+  .social a {
+    font-size: 2.5em;
+    padding: 1.2em;
+  }
+}
+
+/*mobile version*/
+
+@media (max-width: 576px) {
+  .carousel-caption {
+  position: absolute;
+  top: 40%;
+
+}
+  .carousel-caption h1{
+  font-size: 200%;
+}
+
+.carousel-caption h2{
+  font-size: 200%;
+}
+  .carousel-caption .btn{
+    font-size: 95%;
+    padding: 8px 14px;
+  }
+
+  .carousel-indicators{
+    display: none;
+  }
+
+  .display-3{
+    font-size: 170%;
+  }
+
+  .social a {
+    font-size: 2em;
+    padding: .7em;
+  }
 }
 
 
